Update 'iauf54hvu-python' component image to: quay.io/rhtap-test-organization-jk/rhtap-qe:github-0fb61dbc7b982f5bdcd2208d8c962f93a5985f22

--- a/components/iauf54hvu-python/overlays/development/deployment-patch.yaml
+++ b/components/iauf54hvu-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: iauf54hvu-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap-test-organization-jk/rhtap-qe:github-0fb61dbc7b982f5bdcd2208d8c962f93a5985f22
+          name: container-image
